Fixes a bug with IE 7 and IE 8. The buttons were too big (high). Closes #18594.

--- a/assets/stylesheets/reporting.css
+++ b/assets/stylesheets/reporting.css
@@ -402,7 +402,7 @@ td:hover .drill_down, th:hover .drill_down {
 
 
 .buttons .button-icon {
-  padding: 3px 5px 0 16px;
+  padding: 0px 5px 0 16px;
   cursor: pointer;
   background: no-repeat left center;
   border-style: none;
